service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: health-otus-kuber
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web 
  type: ClusterIP
